change cdk deploy script

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk",
-    "deploy": "cdk deploy --require-approval never"
+    "deploy": "cdk deploy --require-approval never --all"
   },
   "devDependencies": {
     "@types/babel__traverse": "7.18.2",
