--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "dependencies": {
     "aws-cdk-lib": "2.53.0",
     "aws-sdk": "^2.1288.0",
+    "aws-xray-sdk": "^3.5.3",
+    "aws-xray-sdk-core": "^3.5.3",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
   }
