--- a/.github/workflows/cdk_deploy.yml
+++ b/.github/workflows/cdk_deploy.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   aws_cdk:
     name: Running Ubutu image
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
